@@ -1,6 +1,10 @@
 2009-08-21  Ulrich Mueller  <ulm@gentoo.org>
 
-	* gentoo-syntax.el (ebuild-mode-common-licenses): New variable.
+	* gentoo-syntax.el (ebuild-mode-portdir): New variable.
+	(ebuild-mode-licenses): New variable, initialise from license
+	directory of Portage tree.
+	(ebuild-mode-arch-list): Initialise from profile directory.
+	(ebuild-mode-arch-stable-list): Variable removed.
 	(ebuild-mode-insert-skeleton): Interactively ask for values.
 	Move function behind mode definitions and completion code.
 	(ebuild-mode-menu): Add ebuild-mode-insert-skeleton to menu.
